# dome

./: .gitignore  .gitmodules  CMakeLists.txt  dome.target  domed.service  install.sh  update.sh
_lib/: CMakeLists.txt  utils.cpp
_lib/commands/: cputemperature.cpp  info.h  ipcamera.cpp  result.cpp  roomhumidity.cpp  roomhumidity.h  roomtemperature.cpp  statistic.cpp  statistic.h
_lib/config/: dir.cpp  file.cpp  file.h  ipcamera.cpp  statistic.cpp  telegram.cpp  telegram.h
_lib/io/: io.h
client/: CMakeLists.txt  command.cpp  command.h  commandor.cpp  commandor.h  config.cpp  config.h  dome_client.service  executor.cpp  executor.h  main.cpp  result.cpp  result.h  tdclient.cpp  tdclient.h
client/commands/: systeminfo.cpp  systeminfo.h
common/: commands.json  db.json  dbusservice.h
common/commands/: command.cpp  command.h  cputemperature.cpp  cputemperature.h  parser.cpp  parser.h  result.cpp  result.h  roomtemperature.cpp  statistic.cpp  systeminfo.cpp  systeminfo.h  systemsensors.cpp  systemsensors.h
common/config/: command.cpp  command.h  commands.cpp  commands.h  config.cpp  config.h  db.cpp  db.h
common/io/: db.cpp  db.h  io.cpp  io.h
config/: commands.json  core.json  db.json  dht22.json  dir.json  ipcamera.json  openweather.json  s8.json  statistic.json  telegram.json
core/: CMakeLists.txt  dome_core.service  main.cpp  reciever.cpp  reciever.h
core/data/: dbsaver.cpp  dbsaver.h  dome_plotdrawer.py  filesaver.cpp  filesaver.h  inforequester.cpp  inforequester.h  ipcamerarequester.cpp  ipcamerarequester.h  plotdrawer.py  requester.cpp  requester.h  statisticrequester.cpp  statisticrequester.h
core/db/: writer.cpp  writer.h
endpoints/: CMakeLists.txt
endpoints/dht22/: CMakeLists.txt  dht22.cpp  dht22.h  dome_ep_dht22.service  main.cpp
endpoints/ipcamera/: CMakeLists.txt  dome_ep_ipcamera.service  ipcamera.cpp  ipcamera.h  main.cpp
endpoints/openweather/: CMakeLists.txt  dome_ep_openweather.service  main.cpp  openweather.cpp  openweather.h
endpoints/s8/: CMakeLists.txt  dome_ep_s8.service  main.cpp  s8.cpp  s8.h  senseairs8.py
endpoints/telegram/: CMakeLists.txt  commandor.h  dome_client.service  dome_ep_telegram.service  main.cpp  replier.cpp  replier.h  reply.cpp  reply.h  tdclient.cpp  tdclient.h
lib/: CMakeLists.txt  endpoint.cpp  endpoint.h  threader.cpp  threader.h  utils.cpp  utils.h  validatable.cpp  validatable.h
lib/commands/: command.cpp  command.h  cputemperature.cpp  info.cpp  ipcamera.cpp  ipcamera.h  parser.cpp  result.cpp  result.h  roomhumidity.cpp  roomtemperature.cpp  roomtemperature.h  statistic.cpp
lib/config/: command.cpp  commands.cpp  config.cpp  config.h  core.cpp  core.h  database.cpp  database.h  db.cpp  db.h  dir.h  endpoint.cpp  endpoint.h  file.cpp  file.h  ipcamera.cpp  ipcamera.h  openweather.cpp  openweather.h  provider.cpp  provider.h  source.cpp  source.h  statistic.cpp  statistic.h  telegram.cpp  telegram.h
lib/data/: getter.cpp  getter.h  ping.cpp  ping.h  processor.h  provider.cpp  provider.h
lib/db/: writer.cpp  writer.h
lib/io/: db.cpp  db.h  dir.cpp  dir.h  io.cpp  io.h
lib/message/: dbsaver.cpp  dbsaver.h  filesaver.cpp  filesaver.h  get.cpp  get.h  info.cpp  info.h  ipcamera.cpp  ipcamera.h  message.cpp  message.h  processor.h  statistic.cpp  statistic.h
lib/message/command/: command.cpp  command.h  info.cpp  info.h  ipcamera.cpp  ipcamera.h  reply.h  statistic.cpp  statistic.h  weather.cpp  weather.h
lib/message/request/: get.cpp  get.h
lib/message/saver/: dbsaver.cpp  dbsaver.h  filesaver.cpp  filesaver.h
lib/mosquitto/: mosq.cpp  mosq.h  receiver.cpp  receiver.h  reciever.cpp  reciever.h  sender.cpp  sender.h  topic.cpp  topic.h
lib/topic/: processor.h  provider.cpp  provider.h  reply.cpp  reply.h  request.cpp  request.h  topic.cpp  topic.h
lib/utils/: dir.cpp  dir.h  file.cpp  file.h  threader.cpp  threader.h  utils.cpp  utils.h  validatable.cpp  validatable.h
mqtt_provider/: CMakeLists.txt  config.json  main.cpp  provider.cpp  provider.h  sender.cpp  sender.h
mqtt_provider/config/: config.cpp  config.h  file.h
mqtt_provider/providers/: dht22.cpp  dht22.h
mqtt_provider_lib/: CMakeLists.txt  provider.cpp  provider.h  sender.cpp  sender.h  utils.cpp
mqtt_provider_lib/config/: config.cpp  config.h
mqtt_provider_lib/core/: provider.cpp  provider.h  sender.cpp  sender.h
mqtt_providers/: CMakeLists.txt
mqtt_providers/dht22/: CMakeLists.txt  dht22.cpp  dht22.h  main.cpp
service/: CMakeLists.txt  config.cpp  config.h  dome.cpp  dome.h  dome.service  domed.service  ipcamera.cpp  ipcamera.h  main.cpp  ru.dome.conf  ru.dome.service  sensors.cpp  sensors.h
service/sources/: ipcamera.cpp  ipcamera.h  sensors.cpp  sensors.h  system.cpp  system.h
statistic/: CMakeLists.txt  command.cpp  command.h  config.cpp  config.h  config.json  database.cpp  database.h  dome_statistic.service  main.cpp  result.cpp  result.h  runner.cpp  runner.h
statistic/writers/: dbwriter.cpp  dbwriter.h  writer.h
